[tool.poetry]
name = "censys-splunk"
version = "0.1.0"
description = "Censys Splunk Add-on and Apps"
authors = ["Censys, Inc. <support@censys.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7.0"
# Docs
furo = {version = "^2022.6.21", optional = true}
rst = {version = "^0.1", optional = true}
Sphinx = {version = "^4.5.0", optional = true}
sphinx_design = {version = "^0.2.0", optional = true}
sphinx-asciidoc = {version = "^1.0.2", optional = true}
sphinx-autobuild = {version = "^2021.3.14", optional = true}
sphinx-copybutton = {version = "^0.5.0", optional = true}
sphinx-prompt = {version = "^1.5.0", optional = true}
sphinx-tabs = {version = "^3.3.1", optional = true}

[tool.poetry.dev-dependencies]
addonfactory-splunk-conf-parser-lib = "^0.3.4"
black = "21.5b1"  # Because of splunk-appinspect (click)
importlib-metadata = { version = ">=4.4", python = "<3.10" }
isort = "^5.10.1"
parameterized = "^0.8.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pyupgrade = "^2.34.0"
requests = "^2.28.0"
splunk-appinspect = "^2.23.0"
splunk-packaging-toolkit = { url = "https://download.splunk.com/misc/packaging-toolkit/splunk-packaging-toolkit-1.0.1.tar.gz", optional = true }

[tool.pytest.ini_options]
minversion = "5.4.0"
testpaths = ["tests"]
pythonpath = ["./packages/Splunk_TA_censys/bin/", "./packages/Splunk_TA_censys/bin/splunk_ta_censys/aob_py3/"]

[tool.poetry.extras]
# Install with poetry install -E docs
docs = [
    "furo",
    "rst",
    "sphinx_design",
    "sphinx-asciidoc",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-prompt",
    "sphinx-tabs",
    "Sphinx"
]
slim = [
    "splunk-packaging-toolkit"
]
# https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-1110189914

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
