[tool.poetry]
name = "censys_splunk"
version = "0.1.0"
description = "Censys Splunk Add-on and Apps"
authors = ["Censys, Inc. <support@censys.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
addonfactory-splunk-conf-parser-lib = "^0.3.4"
black = "21.5b1"  # Because of splunk-appinspect (click)
importlib-metadata = { version = ">=4.4", python = "<3.10" }
isort = "^5.10.1"
parameterized = "^0.8.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pyupgrade = "^2.34.0"
requests = "^2.28.0"
splunk-appinspect = "^2.23.0"
splunk-packaging-toolkit = { url = "https://download.splunk.com/misc/packaging-toolkit/splunk-packaging-toolkit-1.0.1.tar.gz", optional = true }

[tool.pytest.ini_options]
minversion = "5.4.0"
testpaths = ["tests"]
pythonpath = ["./packages/Splunk_TA_censys/bin", "./packages/Splunk_TA_censys/bin/splunk_ta_censys/aob_py3"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2022.6.21"
rst = "^0.1"
sphinx_design = "^0.2.0"
sphinx-asciidoc = "^1.0.2"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.0"
sphinx-prompt = "^1.5.0"
sphinx-tabs = "^3.3.1"
Sphinx = "^4.5.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest-freezegun = "^0.4.2"

[tool.poetry.group.slim]
optional = true

[tool.poetry.group.slim.dependencies]
splunk-packaging-toolkit = { url = "https://download.splunk.com/misc/packaging-toolkit/splunk-packaging-toolkit-1.0.1.tar.gz" }


[build-system]
requires = ["poetry>=1.2.0", "poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
